[gd_scene load_steps=18 format=2]

[ext_resource path="res://Fonts/Silkscreen/slkscr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/TouchCtrlActive.png" type="Texture" id=3]
[ext_resource path="res://Sprites/TouchCtrlInactive.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Nabula.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Stars.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Timer.gd" type="Script" id=8]
[ext_resource path="res://Audio/Juhani Junkala [Retro Game Music Pack] Level 1.wav" type="AudioStream" id=9]
[ext_resource path="res://Sprites/MenuButton.png" type="Texture" id=10]
[ext_resource path="res://Audio/Juhani Junkala [Retro Game Music Pack] Level 2.wav" type="AudioStream" id=11]
[ext_resource path="res://Sprites/Player.png" type="Texture" id=12]
[ext_resource path="res://Audio/Juhani Junkala [Retro Game Music Pack] Ending.wav" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0.137255, 0.0666667, 0.137255, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 812.0, 20.0, 792.0, 574.0, 728.0 ],
"_edit_vertical_guides_": [ 375.0, 20.0, 355.0, 187.0 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="UI" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( -173, 78 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
margin_left = 30.0
margin_top = 41.0
margin_right = 343.0
margin_bottom = 769.0

[node name="TimerInfomation" type="HBoxContainer" parent="CanvasLayer/UI/VBoxContainer"]
margin_right = 313.0
margin_bottom = 33.0
alignment = 1
script = ExtResource( 8 )
seconds = 60

[node name="TimerLabel" type="Label" parent="CanvasLayer/UI/VBoxContainer/TimerInfomation"]
margin_left = 50.0
margin_right = 149.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.937255, 0.968627, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Time: "

[node name="TimerValueSec" type="Label" parent="CanvasLayer/UI/VBoxContainer/TimerInfomation"]
margin_left = 153.0
margin_right = 199.0
margin_bottom = 33.0
rect_min_size = Vector2( 46, 0 )
custom_colors/font_color = Color( 0.937255, 0.968627, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "60"
align = 2
valign = 1

[node name="TimerLabelPoint" type="Label" parent="CanvasLayer/UI/VBoxContainer/TimerInfomation"]
margin_left = 203.0
margin_right = 213.0
margin_bottom = 33.0
rect_min_size = Vector2( 10, 0 )
custom_colors/font_color = Color( 0.937255, 0.968627, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "."
align = 2

[node name="TimerValueMs" type="Label" parent="CanvasLayer/UI/VBoxContainer/TimerInfomation"]
margin_left = 217.0
margin_right = 263.0
margin_bottom = 33.0
rect_min_size = Vector2( 46, 0 )
custom_colors/font_color = Color( 0.937255, 0.968627, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1

[node name="Timer" type="Timer" parent="CanvasLayer/UI/VBoxContainer/TimerInfomation"]
wait_time = 0.1
autostart = true

[node name="PointsInformation" type="HBoxContainer" parent="CanvasLayer/UI/VBoxContainer"]
margin_top = 37.0
margin_right = 313.0
margin_bottom = 70.0
alignment = 1

[node name="PointsLabel" type="Label" parent="CanvasLayer/UI/VBoxContainer/PointsInformation"]
margin_right = 149.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.937255, 0.968627, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Points: "

[node name="PointsValue" type="Label" parent="CanvasLayer/UI/VBoxContainer/PointsInformation"]
margin_left = 153.0
margin_right = 313.0
margin_bottom = 33.0
rect_min_size = Vector2( 160, 0 )
custom_colors/font_color = Color( 0.937255, 0.968627, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "00000"
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/VBoxContainer"]
margin_top = 74.0
margin_right = 313.0
margin_bottom = 724.0
rect_min_size = Vector2( 200, 650 )

[node name="TouchControls" type="HBoxContainer" parent="CanvasLayer/UI/VBoxContainer"]
margin_top = 728.0
margin_right = 313.0
margin_bottom = 728.0
alignment = 1

[node name="LeftBtn" type="TouchScreenButton" parent="CanvasLayer/UI/VBoxContainer/TouchControls"]
modulate = Color( 1, 1, 1, 0.686275 )
position = Vector2( -10, -41 )
normal = ExtResource( 4 )
pressed = ExtResource( 3 )
passby_press = true
action = "move_left"

[node name="RightBtn" type="TouchScreenButton" parent="CanvasLayer/UI/VBoxContainer/TouchControls"]
modulate = Color( 1, 1, 1, 0.686275 )
position = Vector2( 134, 23 )
rotation = 3.14159
normal = ExtResource( 4 )
pressed = ExtResource( 3 )
passby_press = true
action = "move_right"

[node name="FireBtn" type="TouchScreenButton" parent="CanvasLayer/UI/VBoxContainer/TouchControls"]
modulate = Color( 1, 1, 1, 0.686275 )
position = Vector2( 325, -41 )
rotation = 1.5708
normal = ExtResource( 4 )
pressed = ExtResource( 3 )
action = "fire_weapon"

[node name="RetryBtn" type="TouchScreenButton" parent="CanvasLayer/UI/VBoxContainer/TouchControls"]
pause_mode = 2
position = Vector2( 58, -434 )
z_index = 20
z_as_relative = false
normal = ExtResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI/VBoxContainer/TouchControls/RetryBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -160.0
margin_bottom = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UI/VBoxContainer/TouchControls/RetryBtn/CenterContainer"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
color = Color( 0.137255, 0.0666667, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/UI/VBoxContainer/TouchControls/RetryBtn/CenterContainer"]
margin_left = 51.0
margin_top = 35.0
margin_right = 148.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnBtn" type="TouchScreenButton" parent="CanvasLayer/UI/VBoxContainer/TouchControls"]
pause_mode = 2
position = Vector2( 58, -305 )
z_index = 20
z_as_relative = false
normal = ExtResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI/VBoxContainer/TouchControls/ReturnBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -160.0
margin_bottom = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UI/VBoxContainer/TouchControls/ReturnBtn/CenterContainer"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
color = Color( 0.137255, 0.0666667, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/UI/VBoxContainer/TouchControls/ReturnBtn/CenterContainer"]
margin_left = 14.0
margin_top = 35.0
margin_right = 186.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.282353 )
position = Vector2( 189, 225 )
scale = Vector2( 4, 4 )
texture = ExtResource( 12 )

[node name="Congratulations" type="Label" parent="CanvasLayer"]
margin_left = 40.0
margin_top = 182.0
margin_right = 337.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 4 )
text = "Congratulations!

Try again?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Node2D" parent="."]

[node name="LeftLimit" type="StaticBody2D" parent="Level"]
position = Vector2( -20, 666 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/LeftLimit"]
shape = SubResource( 2 )

[node name="RightLimit" type="StaticBody2D" parent="Level"]
position = Vector2( 395, 666 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/RightLimit"]
shape = SubResource( 2 )

[node name="Nebula" type="TextureRect" parent="Level"]
modulate = Color( 0.666667, 0.498039, 0.666667, 1 )
margin_left = -110.0
margin_top = -51.0
margin_right = 490.0
margin_bottom = 857.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlyingStars" parent="Level" instance=ExtResource( 7 )]
layer = 2

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 187.5, 655 )
scale = Vector2( 2, 2 )

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -6.0
autoplay = true

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -6.0

[node name="GameoverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -6.0

[connection signal="timeout" from="CanvasLayer/UI/VBoxContainer/TimerInfomation/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CanvasLayer/UI/VBoxContainer/TimerInfomation/Timer" to="CanvasLayer/UI/VBoxContainer/TimerInfomation" method="_on_Timer_timeout"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/TouchControls/LeftBtn" to="." method="_on_LeftBtn_pressed"]
[connection signal="released" from="CanvasLayer/UI/VBoxContainer/TouchControls/LeftBtn" to="." method="_on_LeftBtn_released"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/TouchControls/RightBtn" to="." method="_on_RightBtn_pressed"]
[connection signal="released" from="CanvasLayer/UI/VBoxContainer/TouchControls/RightBtn" to="." method="_on_RightBtn_released"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/TouchControls/FireBtn" to="." method="_on_FireBtn_pressed"]
[connection signal="released" from="CanvasLayer/UI/VBoxContainer/TouchControls/FireBtn" to="." method="_on_FireBtn_released"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/TouchControls/RetryBtn" to="." method="_on_RetryBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/TouchControls/ReturnBtn" to="." method="_on_ReturnBtn_pressed"]
